# vizproo

./: LICENSE  app.py  requirements.txt
page/: app.py  styles.py
page/views/: basic_usage.py  custom_charts.py  dashboards.py  development.py  examples.py  home.py  installation.py
vizproo/: .coveragerc  .gitignore  LICENSE.txt  MANIFEST.in  README.md  app.py  codecov.yml  install.json  package-lock.json  package.json  pyproject.toml  pytest.ini  vizproo.json  webpack.config.js
vizproo/css/: graphs.css  layout.css  widget.css
vizproo/docs/: Makefile  environment.yml  make.bat
vizproo/docs/examples/: barplot.md  button.md  radviz.md  scatterplot.md  starcoordinates.md
vizproo/docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
vizproo/docs/source/_static/: embed-bundle.js.LICENSE.txt
vizproo/docs/wiki/: bienvenido.md  custom_charts.md  dashboards.md  desarrollo.md  instalación.md  uso_basico.md
vizproo/examples/: Custom.ipynb  Dashboard.ipynb  Tutorial.ipynb  introduction.ipynb  teste.js
vizproo/examples/wiki/: custom_charts.md  dashboards.md  desarrollo.md  uso_basico.md
vizproo/samples/: leo.css  line.js  line_2.css  mapa.css  mapa.js  scatterplot_matrix.js
vizproo/src/: extension.ts  graphs.ts  index.ts  layouts.ts  plugin.ts  version.ts  widget.ts  widgets.ts
vizproo/src/base/: base.ts  base_widget.ts
vizproo/src/const/: colors.ts
vizproo/src/graphs/: barplot.ts  baseplot.ts  interface.ts  radviz.ts  scatterplot.ts  starcoordinates.ts
vizproo/src/graphs/tools/: button_base.ts  button_box_select.ts  button_click_select.ts  button_deselect_all.ts  information_card.ts  side_bar.ts  tools.ts
vizproo/src/layouts/: matrixCreator.ts  matrixLayout.ts
vizproo/src/widgets/: base_text.ts  button.ts  checkbox.ts  dropdown.ts  input.ts  interface.ts  rangeslider.ts  select_color.ts  text.ts  textarea.ts
vizproo/vizproo/: __init__.py  _frontend.py  _version.py  base_widget.py  custom.py  example.py  graphs.py  layouts.py  widgets.py
vizproo/vizproo/graphs_/: __init__.py  barplot.py  radviz.py  scatterplot.py  starcoordinates.py
vizproo/vizproo/nbextension/: extension.js
vizproo/vizproo/tests/: conftest.py  test_example.py  test_nbextension_path.py
